Bug 99140 - Acer Switch Alpha 12 does not get DWT
Summary: Acer Switch Alpha 12 does not get DWT
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-18 22:57 UTC by Carlos Garnacho Parro
Modified: 2016-12-20 22:31 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
keyboard evemu-describe output (6.89 KB, text/plain)
2016-12-18 23:01 UTC, Carlos Garnacho Parro
Details
touchpad evemu-describe output (2.99 KB, text/plain)
2016-12-18 23:02 UTC, Carlos Garnacho Parro
Details
udevadm info --export-db output (191.73 KB, text/plain)
2016-12-18 23:09 UTC, Carlos Garnacho Parro
Details

Description Carlos Garnacho Parro 2016-12-18 22:57:36 UTC
This is a 2-in-1 model whose keyboard/touchpad are detachable, it doesn't seem to get disable-while-typing features. evemu-describe outputs coming.
Comment 1 Carlos Garnacho Parro 2016-12-18 23:01:44 UTC
Created attachment 128532 [details]
keyboard evemu-describe output
Comment 2 Carlos Garnacho Parro 2016-12-18 23:02:31 UTC
Created attachment 128533 [details]
touchpad evemu-describe output
Comment 3 Carlos Garnacho Parro 2016-12-18 23:09:22 UTC
Created attachment 128534 [details]
udevadm info --export-db output
Comment 5 Peter Hutterer 2016-12-20 22:10:18 UTC
commit 0a82d2fa39c8ef5127afc8e6b4a8715e7879bc52
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Dec 19 15:36:34 2016 +1000

    touchpad: if an external touchpad and keyboard share a VID/PID assume dwt
Comment 6 Carlos Garnacho Parro 2016-12-20 22:31:44 UTC
Late to the game... but I confirm it works here :), thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.