test/litest.c
@@ -404,6 +404,8 @@ extern struct litest_test_device litest_wacom_cintiq_13hdt_pad_device;
 extern struct litest_test_device litest_wacom_hid4800_tablet_device;
 extern struct litest_test_device litest_mouse_wheel_click_count_device;
 extern struct litest_test_device litest_calibrated_touchscreen_device;
+extern struct litest_test_device litest_acer_hawaii_keyboard_device;
+extern struct litest_test_device litest_acer_hawaii_touchpad_device;
 
 struct litest_test_device* devices[] = {
 	&litest_synaptics_clickpad_device,
@@ -462,6 +464,8 @@ struct litest_test_device* devices[] = {
 	&litest_wacom_hid4800_tablet_device,
 	&litest_mouse_wheel_click_count_device,
 	&litest_calibrated_touchscreen_device,
+	&litest_acer_hawaii_keyboard_device,
+	&litest_acer_hawaii_touchpad_device,
 	NULL,
 };
 
